<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">InterFatecs Programação</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_menu">Interfatecs</string>
    <string name="welcomeUser">Welcome User</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_map_event">Event Map</string>
    <string name="menu_team">See Teams</string>
    <string name="ranking_equipes">Classificação 1ºFase</string>
    <string name="menu_classi">Classification</string>
    <string name="menu_patroci">Sponsors</string>
    <string name="menu_sobre">About Event</string>
    <string name="menu_organizacao">Organization</string>
    <string name="menu_contato">Contatc</string>

    <string name="action_settings">Settings</string>

    <string name="textHome">This competition has the main objectives of improving student\'s skill on algorithm implementation, development of teamwork and creativity as well as problem solving under pressure. Interfatecs Programming Contest has also the objectives to promote greater integration of faculty and students from diverse graduation courses in TI maintained by Centro Paula Souza, it also has the objective to create more space for discussion on academics activities that can reflect on the courses improvement.</string>
    <string name="textEdicao">5º Edition - Interfatecs Progamming Contest</string>
    <string name="textSede">FACULDADE DE TECNOLOGIA DE SÃO PAULO</string>
    <string name="title_activity_maps">Map</string>
    <string name="email">Email</string>
    <string name="phone">Telephone</string>
    <string name="title_activity_sponsor">SponsorActivity</string>
    <string name="title_activity_equipes">EquipesItemActivity</string>

    <string name="sobre_formato_regras"><![CDATA[Format & Rules]]></string>
    <string name="sobre_edicoes_anteriores">Previous Editions</string>
    <string name="sobre_como_se_preparar">How to prepare</string>

    <string name="text_btn_site">Visit Site</string>

    <string name="problema">Problem</string>
    <string name="tentativas">Attempts</string>
    <string name="acertos">Right answers</string>
    <string name="erros">Wrongs answers</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
